--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^14.1.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "flash": "^1.1.0",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.1.6",
