--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^14.1.0",
@@ -18,6 +20,7 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.1.6",
+    "mongoose-store": "^0.2.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0"
