--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dev": "nodemon ./bin/www -e .hbs,.js"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
     "connect-flash": "^0.1.1",
@@ -17,6 +21,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "flash": "^1.1.0",
+    "fullcalendar": "^5.10.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.1.6",
